Linked my javascript and css page to html

--- a/myhtml.html
+++ b/myhtml.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Ray Christian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Links established here-->
+    <link rel="stylesheet" href="mycss.css">
+    <script src="myjava.js"></script>
+    
 </head>
 
 <body>
