--- a/myhtml.html
+++ b/myhtml.html
@@ -1,7 +1,7 @@
 <!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
-<html>
 
+<html>
 <head> <!--Contains basic meta data for website-->
     <meta charset="UTF-8">
     <meta name="description" content="Web Tutorial">
@@ -12,12 +12,21 @@
     <!--Links established here-->
     <link rel="stylesheet" href="mycss.css">
     <script src="myjava.js"></script>
-    
+
 </head>
 
 <body>
 
+    <section> <!--Horizotonal Bar-->
+        <nav class="navbar-H"> <!--Navigation box established with nav bar tag-->
+            <ul>
+                <li><a href="First Link">First Link</a></li>
+                <li><a href="Second Link">Second Link</a></li>
+            </ul>
+        </nav>
+    </section>
 
 </body>
+
 
 </html>
