Fixed the center of page for Welcome page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
-
 <!--Welcome Page-->
-
 <html>
 <head> <!--Contains basic meta data for website-->
     <meta charset="UTF-8">
@@ -12,33 +10,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Links established here-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleW.css">
     <script src="myjava.js"></script> <!--For Functions-->
 
 </head>
 
 <body>
-
-    <header><!--Established Horizontal Links to Each HTML Document-->
+  
+  <div class="container"> 
+    <div> <!--Need Centered. Logo photo after description-->
+      <h1>Welcome</h1>
+      <h2>Choose a link</h2>
+    </div>
+  </div>
+    <!-- Want on the right side of the page(Photos as Links? or just Links?)
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" style="color:white;">Home</a></li>
             <li><a href="portfolio.html">Portfolios</a></li>
             <li><a href="contact.html">Contact</a></li>
               </ul>
-        </nav>
+        </nav>-->
 
-        <h1>Home</h1>
-<section>
-    <div>a</div>
-    <div>b</div>
-    <div>c</div>
-</section>
-
-<section>lower-section</section>
-
-<footer>footer</footer>
-  </body>
+        
+       
 
 </body>
 
