Added other html fils and 2nd style sheet

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
 
-<!--Welcome Page-->
+<!--About page (Contains Experiences and Past History)-->
 
 <html>
 <head> <!--Contains basic meta data for website-->
