--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
 
-<!--Welcome Page-->
+<!--Future Projects Page (to be continued)-->
 
 <html>
 <head> <!--Contains basic meta data for website-->
