--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
 
-<!--Welcome Page-->
+<!--Contact Page (Number,email,Logo link for email?)-->
 
 <html>
 <head> <!--Contains basic meta data for website-->
