--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
 <body>
   
   <div class="container"> 
-    <div> <!--Need Centered. Logo photo after description-->
+    <div class="box-1"> <!--Need Centered. Logo photo after description-->
       <h1>Welcome</h1>
       <h2>Choose a link</h2>
-    </div>
-  </div>
-    <!-- Want on the right side of the page(Photos as Links? or just Links?)
+
+      <!-- Want on the right side of the page(Photos as Links? or just Links?)-->
         <nav>
-          <ul>
-            <li><a href="index.html" style="color:white;">Home</a></li>
+          <ul class="mylinks">
+            <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolios</a></li>
             <li><a href="contact.html">Contact</a></li>
               </ul>
-        </nav>-->
+        </nav>
+    </div>
 
-        
-       
+  </div>
 
 </body>
 
