Contact styled page template. Currently modifying Information

--- a/contact.html
+++ b/contact.html
@@ -12,33 +12,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Links established here-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleC.css">
     <script src="myjava.js"></script> <!--For Functions-->
 
 </head>
 
 <body>
+     <div class="myspace container-H"> <!--Title Box-->
+      <h1>My title here</h1>
+     </div>
 
-    <header><!--Established Horizontal Links to Each HTML Document-->
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolios</a></li>
-            <li><a href="contact.html">Contact</a></li>
-              </ul>
-        </nav>
+     <div class="myspace container-C"> <!--Contact Info & Link Box-->
 
-        <h1>Home</h1>
-<section>
-    <div>a</div>
-    <div>b</div>
-    <div>c</div>
-</section>
+      <header><h1>Contact Info Here</h1></header>
 
-<section>lower-section</section>
+      <div class="myspace container-D"> <!--Links Box-->
+        <!-- <nav>
+    <ul class="mylinks">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a> </li>
+      <li><a href="portfolio.html">Portfolios</a></li>
+      <li><a href="contact.html">Contact</a></li>
+        </ul>
+  </nav> -->
+      </div>
 
-<footer>footer</footer>
-  </body>
+     </div>
 
 </body>
 
