--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <div class="box-1"> <!--Need Centered. Logo photo after description-->
       <h1>Welcome</h1>
       <h2>Choose a link</h2>
+      <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
 
       <!-- Want on the right side of the page(Photos as Links? or just Links?)-->
         <nav>
           <ul class="mylinks">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a> </li>
             <li><a href="portfolio.html">Portfolios</a></li>
             <li><a href="contact.html">Contact</a></li>
               </ul>
@@ -33,6 +35,9 @@
     </div>
 
   </div>
+
+        
+       
 
 </body>
 
