Modified for center placement contact page

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
      <div class="myspace container-C"> <!--Contact Info & Link Box-->
 
       <div class="myspace container-D">
-      <header >
+      <header>
         <blockquote>
         <h1>Address</h1>
         <h2>
@@ -39,7 +39,7 @@
       </header>
      </div>
 
-      <div> 
+      <div class="myspace container-D"> 
         <nav>
     <ul class="mylinks">
       <li><a href="index.html">Home</a></li>
