--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,15 @@
 <body>
   <div class="content">
     <h2>Coming Soon</h2>
+
+    <nav>
+      <ul class="mylinks">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a> </li>
+        <li><a href="portfolio.html">Portfolios</a></li>
+        <li><a href="contact.html">Contact</a></li>
+          </ul>
+    </nav>
   </div>
 
 </body>
