--- a/about.html
+++ b/about.html
@@ -12,34 +12,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Links established here-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleA.css">
     <script src="myjava.js"></script> <!--For Functions-->
 
 </head>
 
 <body>
 
-    <header><!--Established Horizontal Links to Each HTML Document-->
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Portfolios</a></li>
-            <li><a href="contact.html">Contact</a></li>
-              </ul>
-        </nav>
-
-        <h1>Home</h1>
-<section>
-    <div>a</div>
-    <div>b</div>
-    <div>c</div>
-</section>
-
-<section>lower-section</section>
-
-<footer>footer</footer>
-  </body>
-
+    
 </body>
 
 
