--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!--Links established here-->
     <link rel="stylesheet" href="styleW.css">
     <script src="myjava.js"></script> <!--For Functions-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
 
 </head>
 
@@ -19,20 +22,21 @@
   
   <div class="container"> 
     <div class="box-1"> <!--Need Centered. Logo photo after description-->
-      <h1>Welcome</h1>
-      <h2>Choose a link</h2>
-      <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+      
+      <h1 class="w3-jumbo w3-animate-top">Welcome</h1>
 
       <!-- Want on the right side of the page(Photos as Links? or just Links?)-->
         <nav>
           <ul class="mylinks">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a> </li>
-            <li><a href="portfolio.html">Portfolios</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolio.html">Portfolios</a></li>
               </ul>
         </nav>
     </div>
+
+    
 
   </div>
 
