--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
 
 <body>
 
+    <div class="container">
     <aside class="sidebar">
         <span class="inner-text">
             <nav>
@@ -27,12 +28,13 @@
             <a href="about.html">About</a> 
             <a href="contact.html">Contact</a>
             <a href="portfolio.html">Portfolios</a>
-             </nav> 
+            <a href="resume.html">Resume</a>     
+        </nav> 
         </span>
 
     </aside>
 
-    <main class="content">
+    <main class="content"> <!--animate the background for text and headers -->
         <div class="container-1">
             <div class="container-2">
                 <header>
@@ -89,5 +91,7 @@
         <span class="inner-text">SideBarRight</span>
     </aside>
 
+   
+</div>
 </body>
 </html>
