--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
   <div class="container"> 
     <div class="box-1"> <!--Need Centered. Logo photo after description-->
       
-      <h1 class="w3-jumbo w3-animate-top">Welcome</h1>
+      <h1 class="w3-jumbo w3-animate-top">Welcome</h1> <!--Animate welcome and background-->
 
       <!-- Want on the right side of the page(Photos as Links? or just Links?)-->
         <nav>
-          <ul class="mylinks">
+          <ul class="mylinks"> <!--animate links-->
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a> </li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="portfolio.html">Portfolios</a></li>
-              </ul>
+            <li><a href="resume.html">Resume</a> </li>    
+          </ul>
         </nav>
     </div>
 
