--- a/contact.html
+++ b/contact.html
@@ -18,39 +18,17 @@
 </head>
 
 <body>
-     <div class="myspace container-H"> <!--Title Box-->
-      <h1>Contact</h1>
-     </div>
+  <div class="main">
 
-     <div class="myspace container-C"> <!--Contact Info & Link Box-->
+    <div class="container">
+      
+      <section><p>Contact</p></section>
 
-      <div class="myspace container-D">
-      <header>
-        <blockquote>
-        <h1>Address</h1>
-        <h2>
-          4375 HWY 104
-          Opelousas, LA, 70570
-        </h2>
-        <h2>
-          Number:337-550-4026
-        </h2>
-      </blockquote>
-      </header>
-     </div>
+      
 
-      <div class="myspace container-D"> 
-        <nav>
-    <ul class="mylinks">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a> </li>
-      <li><a href="portfolio.html">Portfolios</a></li>
-      <li><a href="contact.html">Contact</a></li>
-        </ul>
-  </nav> 
-      </div>
+    </div>
 
-     </div>
+  </div>
 
 </body>
 
