Need to add contact, and resume page. Then make repsonsive

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
             </div>
             <div class="container-3">
-                <img class="myimage" src="photos/professionalphoto.JPG" alt="Professional photo">
+                <img class="myimage" src="photos/professionalphoto.JPG" alt="Professional photo"> <!--animate for fading-->
             </div>
             
 
