Contact display is set up for information. Need to add information and style

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,4 @@
-<!--Here we will include what I want in the html document-->
 <!DOCTYPE html>
-
-<!--Contact Page (Number,email,Logo link for email?)-->
 
 <html>
 <head> <!--Contains basic meta data for website-->
@@ -18,17 +15,40 @@
 </head>
 
 <body>
-  <div class="main">
+  
+<!--All information is contained in center flex box: Left side contains the links. Second information. 3rd form.-->
+<div class="form-container">
 
-    <div class="container">
-      
-      <section><p>Contact</p></section>
-
-      
-
+    <div class="nav-bar">
+      <h3>Nav bar and info in here</h3>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a> 
+      <a href="contact.html">Contact</a>
+      <a href="portfolio.html">Portfolios</a>
+      <a href="resume.html">Resume</a>     
+    </nav> 
     </div>
 
+  <div class="contact">
+
+    <section>
+    <h3>Contact Information Here</h3>
+    </section>
+
+    <section>
+      <h3>social media links here</h3>
+    </section>
   </div>
+
+
+  <!--maybe class here? -->
+  <div>
+    <h3>Form Information Here</h3>
+    <h3>Hello</h3>
+  </div>
+
+</div>
 
 </body>
 
