Contact Information form is placed

--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,33 @@
 
   <!--maybe class here? -->
   <div>
+    
     <h3>Form Information Here</h3>
-    <h3>Hello</h3>
+
+    <div class="contact-form">
+    <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name">
+
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name">
+
+      <label for="subject">Purpose</label>
+      <select id="subject" name="purpose">
+        <option value="Math-Tutor"></option>
+        <option value="ACT-Tutor"></option>
+        <option value="Biology-Tutor"></option>
+        <option value="Chemistry-Tutor"></option>
+        <option value="Physics-Tutor"></option>
+        <option value="WebDesigner"></option>
+      </select>
+
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Describe subject & purpose"></textarea>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+    
   </div>
 
 </div>
