Contact page set up is complete. Styleing is all that is left

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,6 @@
 <div class="form-container">
 
     <div class="nav-bar">
-      <h3>Nav bar and info in here</h3>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a> 
@@ -33,7 +32,12 @@
   <div class="contact">
 
     <section>
-    <h3>Contact Information Here</h3>
+    <h3>Number</h3>
+    <h4>337-550-4026</h4>
+
+    <h3>Address</h3>
+    <h4>4375 hwy 104 <br>Opelousas, LA 70570</h4>
+    
     </section>
 
     <section>
