Added icons to contact page

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                 </header>
             </div>
 
-            <div class="container-3">
+            <!-- <div class="container-3">
             <header><h1>Certifications</h1>
                 <h3 class="myList"> 
                     <ul>
@@ -82,7 +82,7 @@
                 </ul>
                 </h3>
             </header>
-            </div>
+            </div> -->
         </div>
 
     </main>
