--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 
     <!--Links established here-->
     <link rel="stylesheet" href="styleC.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="myjava.js"></script> <!--For Functions-->
 
 </head>
@@ -22,27 +23,29 @@
     <div class="nav-bar">
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a> 
-      <a href="contact.html">Contact</a>
-      <a href="portfolio.html">Portfolios</a>
-      <a href="resume.html">Resume</a>     
+            <a href="about.html">About</a> 
+            <a href="contact.html">Contact</a>
+            <a href="portfolio.html">Portfolios</a>
+            <a href="resume.html">Resume</a> 
     </nav> 
     </div>
 
   <div class="contact">
 
-    <section>
-    <h3>Number</h3>
-    <h4>337-550-4026</h4>
+    <section class="number-box border-1">
+    <h3>Number:<ul><h4>337-550-4026</h4></ul></h3>
 
-    <h3>Address</h3>
-    <h4>4375 hwy 104 <br>Opelousas, LA 70570</h4>
+    <h3>Address:<ul><h4>4375 hwy 104 <br>Opelousas, LA 70570</h4></ul></h3>
     
     </section>
 
-    <section>
-      <h3>social media links here</h3>
+    <section class="social-box border-2">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-snapchat-ghost"></a>
     </section>
+
   </div>
 
 
@@ -77,8 +80,11 @@
     
   </div>
 
-</div>
 
+</div>
+<!-- <footer>
+  <p>Footer. Set to bottom and imput social sources</p>
+</footer> -->
 </body>
 
 
