--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,11 @@
 
     <nav>
       <ul class="mylinks">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a> </li>
-        <li><a href="portfolio.html">Portfolios</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <a href="index.html">Home</a>
+            <a href="about.html">About</a> 
+            <a href="contact.html">Contact</a>
+            <a href="portfolio.html">Portfolios</a>
+            <a href="resume.html">Resume</a> 
           </ul>
     </nav>
   </div>
