Basics done. Will continue to modify and research. Adding mobile,desktop etc

--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
     <!--Links established here-->
     <link rel="stylesheet" href="styleR.css">
     <script src="myjava.js"></script> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
 
     </head>
 
@@ -20,21 +21,22 @@
                 <nav>
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a> 
+                    <a href="resume.html">Resume</a>  
                     <a href="contact.html">Contact</a>
-                    <a href="portfolio.html">Portfolios</a>
-                    <a href="resume.html">Resume</a>     
+                    <a href="portfolio.html">Portfolios</a>   
                 </nav> 
             </div>
 
             <div class="right">
 
-                <div class="myborder">
+                <div>
                     
                     <section class="myheader">
                     <h2>Experiences</h2>
                     </section>
 
                     <div class="right-1">
+
                     <section class="centered">
                     <h3>Web Developer</h3>
                     <h4>Independent Contractor, Dec 2023 - Current</h4>
@@ -43,15 +45,15 @@
                         <li>Following best accessibility principles</li>
                         <li>Solving problems and proposing smooth, working solutions</li>
                     </ul>
+
                     </section>
 
                     <div class="centered">
                     <h3>Math Instructor</h3>
                     <h4>Carencro High, Aug 2022 - Current</h4>
                     <ul>
-                        <li>Routinely provided after-school tutoring for struggling Math students five days per week.</li>
-                            <li>Ensured 95% of students in Algebra I class passed the EOC in SY 17-18 and 93% of
-                                students in SY 16-17.</li>
+                        <li>Routinely provided after-school tutoring for struggling Math students.</li>
+                            <li>Ensured 95% of students in Algebra I class pass Leap 2025.</li>
 
                     </ul>
                     </div>
@@ -62,7 +64,7 @@
                         <ul>
                             <li>Adept in online/modular/virtual instruction and instructional tools.</li>
                         <li>Maintains consistent communication with students for educational support. </li>
-                        <li>Uses broad range of resources and applicational technical techniques with instruction. </li>
+                        <li>Uses broad range of resources: Pearson, Moodle, Blackboard. </li>
                             
                         </ul>
                     </div>
@@ -71,7 +73,7 @@
 
                 </div>
 
-                <div class="myborder">
+                <div>
 
                     <section class="myheader">
                     <header>
@@ -82,22 +84,17 @@
                     <div class="right-1">
                     <section class="centered">
                         <h3>Institute of Data</h3>
-                        <ul>
-                        <li>Certification
-                            <ul>
+                        <h4>Certification</h4>
                             <li>Web Development</li>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>React</li>
                             <li>Node.js</li>
                             <li>Express Servers</li>
-                            <li>year</li>
-                            </ul>
-                        </li>
-                        </ul>
+                            <li>year</li>  
                     </section>
 
-                    <section class="centered myborder-2">
+                    <section class="centered">
                         <h3>Mcneese State University</h3>
                     <ul>
                         <li>Masters Mathematics 
@@ -107,6 +104,7 @@
                             </ul>
                         </li>
                     </ul>
+
                     </section>
 
                     <section class="centered">
